--- a/frontend/src/app/shared/nav/nav.component.html
+++ b/frontend/src/app/shared/nav/nav.component.html
@@ -17,11 +17,11 @@
         Ações
       </a>
 
-      <a mat-list-item routerLink="arp">
+      <a mat-list-item routerLink="licitacao">
         <i class="material-icons">
           library_books
         </i>
-        ARP
+        Licitação
       </a>
 
       <a mat-list-item routerLink="ddo">
