--- a/frontend/src/app/pages/acao/acao-form/acao-form.component.html
+++ b/frontend/src/app/pages/acao/acao-form/acao-form.component.html
@@ -18,19 +18,21 @@
       <mat-grid-tile>
         <div class="controles-container">
           <mat-form-field>
-            <input matInput placeholder="Nome" formControlName="nome">
+            <input matInput placeholder="Nome*" formControlName="nome">
+            <mat-error>Campo obrigatório</mat-error>
           </mat-form-field>
           <mat-form-field>
-            <input matInput placeholder="Descrição" formControlName="descricao">
+            <input matInput placeholder="Descrição*" formControlName="descricao">
+            <mat-error>Campo obrigatório</mat-error>
           </mat-form-field>
         </div>
       </mat-grid-tile>
     </mat-grid-list>
     <div class="button-row">
-      <button *ngIf="data" mat-raised-button (click)="updateAcao()" color="primary">
+      <button *ngIf="data" mat-raised-button (click)="updateAcao()" color="primary" [disabled]="formulario.invalid">
         Atualizar
       </button>
-      <button *ngIf="!data" mat-raised-button (click)="createAcao()" color="primary">
+      <button *ngIf="!data" mat-raised-button (click)="createAcao()" color="primary" [disabled]="formulario.invalid">
         Salvar
       </button>
       
