--- a/frontend/src/app/pages/licitacao/licitacao-item/licitacao-item-form/licitacao-item-form.component.html
+++ b/frontend/src/app/pages/licitacao/licitacao-item/licitacao-item-form/licitacao-item-form.component.html
@@ -1,5 +1,5 @@
 <mat-card class="titulo mat-elevation-z0">
-  <div *ngIf="!arpNovoItem; then updateTitle else createTitle"></div>
+  <div *ngIf="!licitacaoNovoItem; then updateTitle else createTitle"></div>
     <ng-template #updateTitle>
       <mat-card-title class="title">
         Editar Item
@@ -19,24 +19,24 @@
         <div class="controles-container">
           <mat-form-field>
             <input matInput placeholder="Número do Item"
-              [(ngModel)]="arpItem.num_arp_item" name="num_arp_item">
+              [(ngModel)]="licitacaoItem.num_licitacao_item" name="num_licitacao_item">
           </mat-form-field>
           <mat-form-field>
             <input matInput placeholder="Item"
-              [(ngModel)]="arpItem.nome_arp_item" name="nome_arp_item">
+              [(ngModel)]="licitacaoItem.nome_licitacao_item" name="nome_licitacao_item">
           </mat-form-field>
           <mat-form-field>
             <input matInput placeholder="Valor"
-              [(ngModel)]="arpItem.valor" name="valor">
+              [(ngModel)]="licitacaoItem.valor" name="valor">
           </mat-form-field>
         </div>
       </mat-grid-tile>
     </mat-grid-list>
     <div class="button-row">
-      <button *ngIf="!arpNovoItem" mat-raised-button (click)="updateItem()" color="primary">
+      <button *ngIf="!licitacaoNovoItem" mat-raised-button (click)="updateItem()" color="primary">
         Atualizar
       </button>
-      <button *ngIf="arpNovoItem" mat-raised-button (click)="createItem()" color="primary">
+      <button *ngIf="licitacaoNovoItem" mat-raised-button (click)="createItem()" color="primary">
         Salvar
       </button>
       
