--- a/frontend/src/app/pages/licitacao/licitacao-form/licitacao-form.component.html
+++ b/frontend/src/app/pages/licitacao/licitacao-form/licitacao-form.component.html
@@ -13,26 +13,35 @@
 </mat-card>
 
 <mat-card class="mat-elevation-z4">
-  <form>
+  <form [formGroup]="formulario">
     <mat-grid-list cols="2" rowHeight="300px">
       <mat-grid-tile>
         <div class="controles-container">
-          
+
           <mat-form-field>
-            <input matInput placeholder="Número da Licitação"
-              [(ngModel)]="licitacao.num_licitacao" name="num_licitacao">
+            <input formControlName="num_licitacao" matInput placeholder="Número da Licitação">
+            <mat-error>Campo obrigatório</mat-error>
           </mat-form-field>
           
           <mat-form-field>
-            <input matInput placeholder="Descrição"
-              [(ngModel)]="licitacao.descricao" name="descricao">
+            <input formControlName="descricao" matInput placeholder="Descrição">
+            <mat-error>Campo obrigatório</mat-error>
           </mat-form-field>
 
           <mat-form-field>
             <mat-label>Ano</mat-label>
-            <mat-select [(ngModel)]="licitacao.ano_licitacao" name="ano_licitacao">
+            <mat-select formControlName="ano_licitacao">
               <mat-option *ngFor="let ano of anos" [value]="ano">
                 {{ano}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field>
+            <mat-label>Modalidade</mat-label>
+            <mat-select formControlName="modalidade" (selectionChange)="alteraModalidade()">
+              <mat-option *ngFor="let modal of modalidades" [value]="modal">
+                {{modal}}
               </mat-option>
             </mat-select>
           </mat-form-field>
@@ -45,7 +54,7 @@
           
           <mat-form-field>
             <mat-label>Ação da JT</mat-label>
-            <mat-select [(ngModel)]="licitacao.id_acao" name="id_acao">
+            <mat-select formControlName="id_acao">
               <mat-option *ngFor="let acao of acoes" [value]="acao.id_acao">
                 {{acao.nome}}
               </mat-option>
@@ -54,22 +63,31 @@
 
           <mat-form-field>
             <mat-label>Unidade Gestora</mat-label>
-            <mat-select [(ngModel)]="licitacao.id_ug" name="id_ug">
+            <mat-select formControlName="id_ug">
               <mat-option *ngFor="let ug of ugs" [value]="ug.id_ug">
                 {{ug.cod_ug}}
               </mat-option>
             </mat-select>
           </mat-form-field>
 
-          <mat-checkbox [(ngModel)]="licitacao.ativa" name="ativa" color="primary">
+          <div *ngIf="temDataVigencia">
+          <mat-form-field>
+            <mat-label>Vigente até</mat-label>
+            <input matInput [matDatepicker]="picker" formControlName="dt_vigencia">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker color="primary"></mat-datepicker>
+          </mat-form-field>
+          </div>
+
+          <!-- <mat-checkbox formControlName="ativa" color="primary">
             ARP vigente
-          </mat-checkbox>
+          </mat-checkbox> -->
 
           <div class="button-row">
-            <button *ngIf="data" mat-raised-button (click)="updateLicitacao()" color="primary">
+            <button *ngIf="data" mat-raised-button (click)="updateLicitacao()" color="primary" [disabled]="formulario.invalid">
               Atualizar
             </button>
-            <button *ngIf="!data" mat-raised-button (click)="createLicitacao()" color="primary">
+            <button *ngIf="!data" mat-raised-button (click)="createLicitacao()" color="primary" [disabled]="formulario.invalid">
               Salvar
             </button>
             
