--- a/frontend/src/app/pages/licitacao/licitacao-item/licitacao-item-list/licitacao-item-list.component.html
+++ b/frontend/src/app/pages/licitacao/licitacao-item/licitacao-item-list/licitacao-item-list.component.html
@@ -22,7 +22,7 @@
   <!-- Campos do formulário -->
   <table mat-table class="full-width-table" [dataSource]="itens" matSort>
 
-    <ng-container matColumnDef="num_licitaco_item">
+    <ng-container matColumnDef="num_licitacao_item">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Número do Item</th>
       <td mat-cell *matCellDef="let row">{{row.num_licitacao_item}}</td>
     </ng-container>
@@ -41,11 +41,11 @@
       <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let row">
 
-        <button matTooltip="Editar Item" mat-icon-button (click)="updateItem( row.id_arp_item )">
+        <button matTooltip="Editar Item" mat-icon-button (click)="updateItem( row.id_licitacao_item )">
           <mat-icon class="edit">edit</mat-icon>
         </button>
 
-        <button matTooltip="Excluir Item" mat-icon-button (click)="deleteItem( row.id_arp_item )">
+        <button matTooltip="Excluir Item" mat-icon-button (click)="deleteItem( row.id_licitacao_item )">
           <mat-icon class="delete">delete</mat-icon>
         </button>
         
