--- a/frontend/src/app/pages/ddo/ddo-form/ddo-form.component.html
+++ b/frontend/src/app/pages/ddo/ddo-form/ddo-form.component.html
@@ -54,7 +54,7 @@
           </mat-checkbox>
 
           <mat-checkbox [(ngModel)]="ddo.possui_dod" name="possui_dod" color="primary">
-            Possui DDO
+            Possui DOD
           </mat-checkbox>
 
           <mat-checkbox [(ngModel)]="ddo.aprc_cgtic_local" name="aprc_cgtic_local" color="primary">
