--- a/frontend/src/app/pages/ddo/ddo-item/ddo-item-update/ddo-item-update.component.html
+++ b/frontend/src/app/pages/ddo/ddo-item/ddo-item-update/ddo-item-update.component.html
@@ -12,7 +12,7 @@
         <div class="controles-container">
 
           <mat-form-field>
-            <input matInput placeholder="ARP" disabled
+            <input matInput placeholder="Licitação" disabled
               [(ngModel)]="identificaARP" name="identificaARP">
           </mat-form-field>
           <mat-form-field>
