--- a/frontend/src/app/pages/ddo/ddo.component.html
+++ b/frontend/src/app/pages/ddo/ddo.component.html
@@ -24,7 +24,7 @@
     </ng-container>
 
     <ng-container matColumnDef="nome_ug">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="Unidade Gestora">UG</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="Unidade Gestora">Demandante</th>
       <td mat-cell *matCellDef="let row">{{row.nome_ug}}</td>
     </ng-container>
 
