--- a/frontend/src/app/pages/ddo/ddo-item/ddo-item-update/ddo-item-update.component.html
+++ b/frontend/src/app/pages/ddo/ddo-item/ddo-item-update/ddo-item-update.component.html
@@ -40,10 +40,10 @@
               [(ngModel)]="ddoItem.qtd_demandada" name="qtd_demandada">
           </mat-form-field>
 
-          <mat-form-field>
+          <!-- <mat-form-field>
             <input matInput placeholder="Qtd. Aprovada"
               [(ngModel)]="ddoItem.qtd_aprovada" name="qtd_aprovada">
-          </mat-form-field>
+          </mat-form-field> -->
         </div>
       </mat-grid-tile>
     </mat-grid-list>
