--- a/frontend/src/app/pages/ddo/ddo-item/ddo-item-form/ddo-item-form.component.html
+++ b/frontend/src/app/pages/ddo/ddo-item/ddo-item-form/ddo-item-form.component.html
@@ -22,13 +22,13 @@
   <table mat-table class="full-width-table" [dataSource]="data.itens" matSort>
 
     <ng-container matColumnDef="nome_licitacao_item">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome do Item</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Item</th>
       <td mat-cell *matCellDef="let row">{{row.nome_licitacao_item}}</td>
     </ng-container>
 
     <ng-container matColumnDef="valor_item">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Valor do Item</th>
-      <td mat-cell *matCellDef="let row">{{row.valor_item | currency: 'BRL'}}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Valor</th>
+      <td mat-cell *matCellDef="let row">{{row.valor | currency: 'BRL'}}</td>
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
