--- a/frontend/src/app/pages/ddo/ddo-item/ddo-item-form/ddo-item-form.component.html
+++ b/frontend/src/app/pages/ddo/ddo-item/ddo-item-form/ddo-item-form.component.html
@@ -1,15 +1,4 @@
-<!-- <p>ddo-item-form works!</p>
-<button mat-raised-button mat-dialog-close>
-  Cancelar
-</button>
-<div>
-  <pre>
-    {{data | json}}
-  </pre>
-</div>
- -->
-
- <mat-card class="titulo mat-elevation-z0">
+<mat-card class="titulo mat-elevation-z0">
   <mat-card-title class="title">
     Itens do DDO
   </mat-card-title>
@@ -18,26 +7,56 @@
   </mat-card-subtitle>
 </mat-card>
 
+<!-- <button mat-raised-button mat-dialog-close>
+  Cancelar
+</button>
+<div>
+  <pre>
+    {{data | json}}
+  </pre>
+</div> -->
+
 <mat-card class="home mat-elevation-z4">
-  <table mat-table class="full-width-table" [dataSource]="data.itens" matSort>
+  <table mat-table class="full-width-table" [dataSource]="itens">
 
     <ng-container matColumnDef="nome_licitacao_item">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Item</th>
+      <th mat-header-cell *matHeaderCellDef>Item</th>
       <td mat-cell *matCellDef="let row">{{row.nome_licitacao_item}}</td>
     </ng-container>
 
-    <ng-container matColumnDef="valor_item">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Valor</th>
+    <ng-container matColumnDef="valor">
+      <th mat-header-cell *matHeaderCellDef>Valor</th>
       <td mat-cell *matCellDef="let row">{{row.valor | currency: 'BRL'}}</td>
     </ng-container>
-  
+
+    <ng-container matColumnDef="qtd_demandada">
+      <th mat-header-cell *matHeaderCellDef>Qtd. Demandada</th>
+      <td mat-cell *matCellDef="let row">
+        <mat-form-field>
+          <input matInput placeholder="Qtd. Demandada"
+                  [(ngModel)]="item.qtd_demandada" name="qtd_demandada">
+        </mat-form-field>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="elemento_despesa">
+      <th mat-header-cell *matHeaderCellDef>Elemento de Despesa</th>
+      <td mat-cell *matCellDef="let row">
+        <mat-form-field>
+          <input matInput placeholder="Elemento de Despesa"
+            [(ngModel)]="item.elemento_despesa" name="elemento_despesa">
+        </mat-form-field>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+  <!-- <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator> -->
+  <div class="button-row">
+    <button mat-raised-button mat-dialog-close>
+      Cancelar
+    </button>
+  </div>
 </mat-card>
-
-<button mat-raised-button mat-dialog-close>
-  Cancelar
-</button>
