--- a/frontend/src/app/pages/ddo/ddo-item/ddo-item-form/ddo-item-form.component.scss
+++ b/frontend/src/app/pages/ddo/ddo-item/ddo-item-form/ddo-item-form.component.scss
@@ -1,3 +1,7 @@
+.full-width-table {
+  width: 100%;
+}
+
 .titulo .ttile {
   font-size: 3rem;
   font-weight: 300;
@@ -40,7 +44,7 @@ button {
 }
 
 .button-row button {
-  margin: 5px;
+  margin-top: 15px;
 }
 
 .adicionar {
