--- a/frontend/src/app/pages/ddo/ddo-item/ddo-item-form/ddo-item-form.component.html
+++ b/frontend/src/app/pages/ddo/ddo-item/ddo-item-form/ddo-item-form.component.html
@@ -33,8 +33,7 @@
       <th mat-header-cell *matHeaderCellDef>Qtd. Demandada</th>
       <td mat-cell *matCellDef="let row">
         <mat-form-field>
-          <input matInput placeholder="Qtd. Demandada"
-                  [(ngModel)]="item.qtd_demandada" name="qtd_demandada">
+          <input [(ngModel)]="row.qtd_demandada" matInput>
         </mat-form-field>
       </td>
     </ng-container>
@@ -43,8 +42,7 @@
       <th mat-header-cell *matHeaderCellDef>Elemento de Despesa</th>
       <td mat-cell *matCellDef="let row">
         <mat-form-field>
-          <input matInput placeholder="Elemento de Despesa"
-            [(ngModel)]="item.elemento_despesa" name="elemento_despesa">
+          <input [(ngModel)]="row.elemento_despesa" matInput>
         </mat-form-field>
       </td>
     </ng-container>
@@ -55,6 +53,9 @@
   </table>
   <!-- <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator> -->
   <div class="button-row">
+    <button mat-raised-button (click)="completarDados()" color="primary">
+      Adicionar
+    </button>
     <button mat-raised-button mat-dialog-close>
       Cancelar
     </button>
