--- a/frontend/src/app/pages/ddo/ddo-item/ddo-item-form/ddo-item-form.component.html
+++ b/frontend/src/app/pages/ddo/ddo-item/ddo-item-form/ddo-item-form.component.html
@@ -53,7 +53,7 @@
   </table>
   <!-- <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator> -->
   <div class="button-row">
-    <button mat-raised-button (click)="completarDados()" color="primary">
+    <button mat-raised-button (click)="adicionarDados()" color="primary">
       Adicionar
     </button>
     <button mat-raised-button mat-dialog-close>
