Ajuste na tela inicial

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,12 +1,11 @@
 <div class="grid-container">
-  <img src="assets/Logo_Conselho.png" alt="CSJT">
+  <img src="assets/Logo_Conselho.png" alt="CSJT" />
   <span class="saudacao">
-    Bem-vindo ao Sistema de Controle Orçamentário da 
-    Secretaria de Tecnolgia da Informação do 
-    Conselho Superior da Justiça do Trabalho
+    Bem-vindo<br />
+    ao<br />
+    Sistema de Controle Orçamentário
   </span>
 </div>
-
 
 <!-- <mat-card class="titulo mat-elevation-z0">
   <mat-card-title class="title">
