--- a/frontend/src/app/pages/descent/descent.component.html
+++ b/frontend/src/app/pages/descent/descent.component.html
@@ -10,63 +10,120 @@
 <mat-card class="home mat-elevation-z4">
   <div class="search-div">
     <mat-form-field class="search-form-field">
-      <input matInput [(ngModel)]="searchKey" placeholder="Pesquisa" autocomplete="off" (keyup)="pesquisar()">
-      <button mat-button matSuffix mat-icon-button matTooltip="Limpar pesquisa" (click)="limparPesquisa()">
+      <input
+        matInput
+        [(ngModel)]="searchKey"
+        placeholder="Pesquisa"
+        autocomplete="off"
+        (keyup)="pesquisar()"
+      />
+      <button
+        mat-button
+        matSuffix
+        mat-icon-button
+        matTooltip="Limpar pesquisa"
+        (click)="limparPesquisa()"
+      >
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
   </div>
 
   <table mat-table class="full-width-table" [dataSource]="descents" matSort>
-    <!-- Id Column -->
+    <ng-container matColumnDef="num_processo">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        matTooltip="Nr. do processo no PAE"
+      >
+        PAE
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.num_processo }}</td>
+    </ng-container>
+
     <ng-container matColumnDef="nome_ug">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="DDO">DDO</th>
-      <td mat-cell *matCellDef="let row">{{row.nome_ug}}</td>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        matTooltip="Regional"
+      >
+        UG
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.nome_ug }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="nome_acao">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        matTooltip="Ação da JT"
+      >
+        Ação
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.nome_acao }}</td>
     </ng-container>
 
     <ng-container matColumnDef="vlr_total_aprovado">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="Valor Aprovado">Valor Aprovado</th>
-      <td mat-cell *matCellDef="let row">{{row.vlr_total_aprovado | currency: 'BRL'}}</td>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        matTooltip="Valor Aprovado"
+      >
+        Valor Aprovado
+      </th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.vlr_total_aprovado | currency: "BRL" }}
+      </td>
     </ng-container>
 
-    <ng-container matColumnDef="num_processo">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="Nr. do processo no PAE">PAE</th>
-      <td mat-cell *matCellDef="let row">{{row.num_processo}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="reuniao_cgtic">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="Reunião do CGGTIC">CGTIC</th>
-      <td mat-cell *matCellDef="let row">{{row.reuniao_cgtic}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="dt_aprov_cgtic">
+    <!-- <ng-container matColumnDef="dt_aprov_cgtic">
       <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="Data da aprovação">Dt. Aprovação</th>
       <td mat-cell *matCellDef="let row">{{row.dt_aprov_cgtic  | date }}</td>
-    </ng-container>
+    </ng-container> -->
 
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef >Ações</th>
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let row">
-
-        <button matTooltip="Editar Descentralização" mat-icon-button (click)="updateDescent( row.id_descentralizacao )">
+        <button
+          matTooltip="Editar Descentralização"
+          mat-icon-button
+          (click)="updateDescent(row.id_descentralizacao)"
+        >
           <mat-icon class="edit">edit</mat-icon>
         </button>
 
-        <button matTooltip="Excluir Descentralização" mat-icon-button (click)="deleteDescent( row.id_descentralizacao )">
+        <button
+          matTooltip="Excluir Descentralização"
+          mat-icon-button
+          (click)="deleteDescent(row.id_descentralizacao)"
+        >
           <mat-icon class="delete">delete</mat-icon>
         </button>
-
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 15]"
+    [pageSize]="5"
+    showFirstLastButtons
+  ></mat-paginator>
 </mat-card>
 
 <mat-card class="mat-elevation-z0 adicionar">
-  <button matTooltip="Nova Descentralização" class="botao" mat-mini-fab color="primary" (click)="novaDescent()" >
+  <button
+    matTooltip="Nova Descentralização"
+    class="botao"
+    mat-mini-fab
+    color="primary"
+    (click)="novaDescent()"
+  >
     <mat-icon>add</mat-icon>
   </button>
 </mat-card>
