--- a/frontend/src/app/pages/nota-credito/nota-credito-form/nota-credito-form.component.html
+++ b/frontend/src/app/pages/nota-credito/nota-credito-form/nota-credito-form.component.html
@@ -34,7 +34,12 @@
             <mat-error>Campo obrigatório</mat-error>
           </mat-form-field>
           <mat-form-field>
-            <input matInput placeholder="Valor" formControlName="valor" />
+            <input
+              matInput
+              placeholder="Valor"
+              formControlName="valor"
+              type="number"
+            />
             <mat-error>Campo obrigatório</mat-error>
           </mat-form-field>
         </div>
