--- a/frontend/src/app/pages/ddo/ddo-form/ddo-form.component.html
+++ b/frontend/src/app/pages/ddo/ddo-form/ddo-form.component.html
@@ -1,15 +1,15 @@
 <mat-card class="titulo mat-elevation-z0">
-  <div *ngIf="data; then updateTitle else createTitle"></div>
-    <ng-template #updateTitle>
-      <mat-card-title class="title">
-        Editar Documento de Oficialização de Demanda Orçamentária
-      </mat-card-title>
-    </ng-template>
-    <ng-template #createTitle>
-      <mat-card-title class="title">
-        Novo Documento de Oficialização de Demanda Orçamentária
-      </mat-card-title>
-    </ng-template>
+  <div *ngIf="data; then updateTitle; else createTitle"></div>
+  <ng-template #updateTitle>
+    <mat-card-title class="title">
+      Editar Documento de Oficialização de Demanda Orçamentária
+    </mat-card-title>
+  </ng-template>
+  <ng-template #createTitle>
+    <mat-card-title class="title">
+      Novo Documento de Oficialização de Demanda Orçamentária
+    </mat-card-title>
+  </ng-template>
 </mat-card>
 
 <mat-card class="home mat-elevation-z4">
@@ -21,7 +21,7 @@
             <mat-label>Ação da JT</mat-label>
             <mat-select [(ngModel)]="ddo.id_acao" name="id_acao">
               <mat-option *ngFor="let acao of acoes" [value]="acao.id_acao">
-                {{acao.nome}}
+                {{ acao.nome }}
               </mat-option>
             </mat-select>
           </mat-form-field>
@@ -30,19 +30,29 @@
             <mat-label>Unidade Gestora</mat-label>
             <mat-select [(ngModel)]="ddo.id_ug" name="id_ug">
               <mat-option *ngFor="let ug of ugs" [value]="ug.id_ug">
-                {{ug.cod_ug}}
+                {{ ug.cod_ug }}
               </mat-option>
             </mat-select>
           </mat-form-field>
 
           <mat-form-field>
-            <input matInput placeholder="Recurso Próprio"
-              [(ngModel)]="ddo.recurso_proprio" name="recurso_proprio">
+            <input
+              matInput
+              placeholder="Recurso Próprio"
+              type="number"
+              [(ngModel)]="ddo.recurso_proprio"
+              name="recurso_proprio"
+            />
           </mat-form-field>
-      
+
           <mat-form-field>
-            <input matInput placeholder="Vlr. Demandado"
-              [(ngModel)]="ddo.vlr_demandado" name="vlr_demandado">
+            <input
+              matInput
+              placeholder="Vlr. Demandado"
+              type="number"
+              [(ngModel)]="ddo.vlr_demandado"
+              name="vlr_demandado"
+            />
           </mat-form-field>
         </div>
       </mat-grid-tile>
@@ -53,27 +63,51 @@
             Ação nova
           </mat-checkbox>
 
-          <mat-checkbox [(ngModel)]="ddo.possui_dod" name="possui_dod" color="primary">
+          <mat-checkbox
+            [(ngModel)]="ddo.possui_dod"
+            name="possui_dod"
+            color="primary"
+          >
             Possui DOD
           </mat-checkbox>
 
-          <mat-checkbox [(ngModel)]="ddo.aprc_cgtic_local" name="aprc_cgtic_local" color="primary">
+          <mat-checkbox
+            [(ngModel)]="ddo.aprc_cgtic_local"
+            name="aprc_cgtic_local"
+            color="primary"
+          >
             Aprovado pelo CGTIC Local
           </mat-checkbox>
-      
-          <mat-checkbox [(ngModel)]="ddo.compr_liquidacao" name="compr_liquidacao" color="primary">
+
+          <mat-checkbox
+            [(ngModel)]="ddo.compr_liquidacao"
+            name="compr_liquidacao"
+            color="primary"
+          >
             Se compromete com a liquidação
           </mat-checkbox>
-      
-          <mat-checkbox [(ngModel)]="ddo.cronograma" name="cronograma" color="primary">
+
+          <mat-checkbox
+            [(ngModel)]="ddo.cronograma"
+            name="cronograma"
+            color="primary"
+          >
             Possui Cronograma
           </mat-checkbox>
-      
-          <mat-checkbox [(ngModel)]="ddo.ass_presidente" name="ass_presidente" color="primary">
+
+          <mat-checkbox
+            [(ngModel)]="ddo.ass_presidente"
+            name="ass_presidente"
+            color="primary"
+          >
             Assinado pelo Presidente
           </mat-checkbox>
-      
-          <mat-checkbox [(ngModel)]="ddo.po_local" name="po_local" color="primary">
+
+          <mat-checkbox
+            [(ngModel)]="ddo.po_local"
+            name="po_local"
+            color="primary"
+          >
             Incluso no PO local
           </mat-checkbox>
         </div>
@@ -81,13 +115,23 @@
     </mat-grid-list>
 
     <div class="button-row">
-      <button *ngIf="data" mat-raised-button (click)="updateDdo()" color="primary">
+      <button
+        *ngIf="data"
+        mat-raised-button
+        (click)="updateDdo()"
+        color="primary"
+      >
         Atualizar
       </button>
-      <button *ngIf="!data" mat-raised-button (click)="createDdo()" color="primary">
+      <button
+        *ngIf="!data"
+        mat-raised-button
+        (click)="createDdo()"
+        color="primary"
+      >
         Salvar
       </button>
-      
+
       <button mat-raised-button (click)="cancel()">
         Cancelar
       </button>
