--- a/frontend/src/app/pages/ddo/ddo-item/ddo-item-form/ddo-item-form.component.html
+++ b/frontend/src/app/pages/ddo/ddo-item/ddo-item-form/ddo-item-form.component.html
@@ -18,22 +18,21 @@
 
 <mat-card class="home mat-elevation-z4">
   <table mat-table class="full-width-table" [dataSource]="itens">
-
     <ng-container matColumnDef="nome_licitacao_item">
       <th mat-header-cell *matHeaderCellDef>Item</th>
-      <td mat-cell *matCellDef="let row">{{row.nome_licitacao_item}}</td>
+      <td mat-cell *matCellDef="let row">{{ row.nome_licitacao_item }}</td>
     </ng-container>
 
     <ng-container matColumnDef="valor">
       <th mat-header-cell *matHeaderCellDef>Valor</th>
-      <td mat-cell *matCellDef="let row">{{row.valor | currency: 'BRL'}}</td>
+      <td mat-cell *matCellDef="let row">{{ row.valor | currency: "BRL" }}</td>
     </ng-container>
 
     <ng-container matColumnDef="qtd_demandada">
       <th mat-header-cell *matHeaderCellDef>Qtd. Demandada</th>
       <td mat-cell *matCellDef="let row">
         <mat-form-field>
-          <input [(ngModel)]="row.qtd_demandada" matInput>
+          <input [(ngModel)]="row.qtd_demandada" matInput type="number" />
         </mat-form-field>
       </td>
     </ng-container>
@@ -42,14 +41,13 @@
       <th mat-header-cell *matHeaderCellDef>Elemento de Despesa</th>
       <td mat-cell *matCellDef="let row">
         <mat-form-field>
-          <input [(ngModel)]="row.elemento_despesa" matInput>
+          <input [(ngModel)]="row.elemento_despesa" matInput />
         </mat-form-field>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
   <!-- <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator> -->
   <div class="button-row">
