--- a/frontend/src/app/pages/licitacao/licitacao-item/licitacao-item-form/licitacao-item-form.component.html
+++ b/frontend/src/app/pages/licitacao/licitacao-item/licitacao-item-form/licitacao-item-form.component.html
@@ -1,15 +1,15 @@
 <mat-card class="titulo mat-elevation-z0">
-  <div *ngIf="!licitacaoNovoItem; then updateTitle else createTitle"></div>
-    <ng-template #updateTitle>
-      <mat-card-title class="title">
-        Editar Item
-      </mat-card-title>
-    </ng-template>
-    <ng-template #createTitle>
-      <mat-card-title class="title">
-        Novo Item
-      </mat-card-title>
-    </ng-template>
+  <div *ngIf="!licitacaoNovoItem; then updateTitle; else createTitle"></div>
+  <ng-template #updateTitle>
+    <mat-card-title class="title">
+      Editar Item
+    </mat-card-title>
+  </ng-template>
+  <ng-template #createTitle>
+    <mat-card-title class="title">
+      Novo Item
+    </mat-card-title>
+  </ng-template>
 </mat-card>
 
 <mat-card class="mat-elevation-z4">
@@ -18,28 +18,52 @@
       <mat-grid-tile>
         <div class="controles-container">
           <mat-form-field>
-            <input matInput placeholder="Número do Item"
-              [(ngModel)]="licitacaoItem.num_licitacao_item" name="num_licitacao_item">
+            <input
+              matInput
+              placeholder="Número do Item"
+              type="number"
+              [(ngModel)]="licitacaoItem.num_licitacao_item"
+              name="num_licitacao_item"
+            />
           </mat-form-field>
           <mat-form-field>
-            <input matInput placeholder="Item"
-              [(ngModel)]="licitacaoItem.nome_licitacao_item" name="nome_licitacao_item">
+            <input
+              matInput
+              placeholder="Item"
+              [(ngModel)]="licitacaoItem.nome_licitacao_item"
+              name="nome_licitacao_item"
+            />
           </mat-form-field>
           <mat-form-field>
-            <input matInput placeholder="Valor"
-              [(ngModel)]="licitacaoItem.valor" name="valor">
+            <input
+              matInput
+              placeholder="Valor"
+              type="number"
+              [(ngModel)]="licitacaoItem.valor"
+              name="valor"
+            />
           </mat-form-field>
         </div>
       </mat-grid-tile>
     </mat-grid-list>
     <div class="button-row">
-      <button *ngIf="!licitacaoNovoItem" mat-raised-button (click)="updateItem()" color="primary">
+      <button
+        *ngIf="!licitacaoNovoItem"
+        mat-raised-button
+        (click)="updateItem()"
+        color="primary"
+      >
         Atualizar
       </button>
-      <button *ngIf="licitacaoNovoItem" mat-raised-button (click)="createItem()" color="primary">
+      <button
+        *ngIf="licitacaoNovoItem"
+        mat-raised-button
+        (click)="createItem()"
+        color="primary"
+      >
         Salvar
       </button>
-      
+
       <button mat-raised-button (click)="cancel()">
         Cancelar
       </button>
